syntax = "proto3";

package services;

enum ServiceID {
    SERVICE1 = 0;
}